<resources>
    <string name="app_name">Positivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_meetup">Meetup</string>
    <string name="title_resources">Resources</string>
    <string name="Wikipedia_Article">Wikipedia Smartphone Addiction</string>
    <string name="SAMHSA_Helpline">Substance and Mental Health Services (SAMHSA)</string>
    <string name="resources">Resources</string>
    <string name="profile_age">Age: %1$d</string>
    <string name="map_description">Map showing user and positivity pals locations</string>
</resources>
