<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_meetup"
        android:name="com.example.positivity_hci_2023.ui.meetup.MeetupFragment"
        android:label="@string/title_meetup"
        tools:layout="@layout/fragment_meetup" />
    <fragment
        android:id="@+id/navigation_resources"
        android:name="com.example.positivity_hci_2023.ui.resources.ResourcesFragment"
        android:label="@string/title_resources"
        tools:layout="@layout/fragment_resources" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.positivity_hci_2023.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.positivity_hci_2023.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.positivity_hci_2023.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>